--- a/CreatingProfile_AboutMe.html
+++ b/CreatingProfile_AboutMe.html
@@ -62,12 +62,13 @@
                                                 </small>
                                             </div>
                                         </div>
-                                        <small class="central-left-photo-text">
+                                        <small id="CCC">
                                         Загрузите фотографию весом не более 10 мб
                                         </small>
                                     </label>
-                                    <input type="file" id="photo">
+                                    <input class="Photo-input" type="file" id="photo">
                                 </div>
+                                <img class="Users_photo" src="" alt="">
                                 <div class="Main_informormation">
                                     <div class="Name_and_sex">
                                         <label for="name" class="form-description" id="secondary-black"> 
@@ -272,5 +273,9 @@
                     <div id="rectangle"></div>
                 </footer>
         </div>
+        <script src="./js/more.js" ></script>
+        <script src="./js/photo_input.js" ></script>
+        <script src="./js/preview.js" ></script>
+        <script src="./js/validation.js" ></script>
     </body>
 </html>
